20240105 Add docstring & PEP8 to `result_` | Set `fastjet` to optioinal

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -116,7 +116,7 @@
     "        new_state_dict[new_key] = old_state_dict[old_key]\n",
     "    model.load_state_dict(new_state_dict)\n",
     "\n",
-    "def prediction(x, general_config, data_config, quantum_config):\n",
+    "def prediction(x, data_config, quantum_config):\n",
     "    # Choose pretrained model with number of particles = 8 -> qidx = log2(8) = 3\n",
     "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "\n",
@@ -140,17 +140,17 @@
    "source": [
     "# Recreate a new data configuration list.\n",
     "data_config_list = [\n",
-    "    # 2-prong v.s. 1-prong.\n",
-    "    g_main.generate_data_config(\n",
-    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
-    "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
-    "    ),\n",
+    "    # # 2-prong v.s. 1-prong.\n",
+    "    # g_main.generate_data_config(\n",
+    "    #     sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "    #     cut_pt=(800, 1000), subjet_radius=0, \n",
+    "    #     bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "    #     num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "    # ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    g_main.generate_data_config(\n",
-    "        sig=\"VzToZhToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
+    "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
     "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
     "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
@@ -185,7 +185,6 @@
     "        # Prediction on PennyLane.\n",
     "        _y_penl, _meas_penl = prediction(\n",
     "            x=_x,\n",
-    "            general_config=general_config,\n",
     "            data_config=data_config,\n",
     "            quantum_config={\"qdevice\": \"default.qubit\", \"diff_method\": \"best\", \"qbackend\": \"\"}\n",
     "        )\n",
@@ -193,7 +192,6 @@
     "        # Prediction on IBMQ.\n",
     "        _y_ibmq, _meas_ibmq = prediction(\n",
     "            x=_x,\n",
-    "            general_config=general_config,\n",
     "            data_config=data_config,\n",
     "            quantum_config={\"qdevice\": \"qiskit.ibmq\", \"diff_method\": \"parameter-shift\", \"qbackend\": ibmq_backend}\n",
     "        )\n",
