--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -1034,7 +1034,7 @@
     "    # _, summary = execute_classical(\n",
     "    #     general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"predict\")\n",
     "    # b_df = pd.concat((b_df, summary))\n",
-    "    # csv_file = f\"classical-{general_config['num_bin_data']}_best.csv\"\n",
+    "    # csv_file = f\"best_classical-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
     "    # b_df.to_csv(os.path.join(pred_dir, csv_file), index=False)\n",
     "\n",
     "    # # Prediction for quantum QCGNN.\n",
@@ -1045,7 +1045,7 @@
     "    #     # Concatenating to prediction buffers.\n",
     "    #     q_df = pd.concat((q_df, summary))\n",
     "    # # Saving prediction summary to csv file.\n",
-    "    # csv_file = f\"qnn{qnn_dim}_gl1_gr{qnn_dim}_ptc({num_ptcs_range[0]},{num_ptcs_range[-1]})-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
+    "    # csv_file = f\"quantum-{general_config['num_bin_data']}_{rnd_seed}.csv\"\n",
     "    # q_df.to_csv(os.path.join(pred_dir, csv_file), index=False)"
    ]
   }
