--- a/demo_compare_enc.ipynb
+++ b/demo_compare_enc.ipynb
@@ -11,13 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lightning as L\n",
     "import module_model\n",
-    "import pennylane as qml\n",
     "from pennylane import numpy as np\n",
     "import torch\n",
     "\n",
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,9 +56,7 @@
      "output_type": "stream",
      "text": [
       "Global seed set to 0\n",
-      "Global seed set to 0\n",
-      "Global seed set to 1\n",
-      "Global seed set to 1\n"
+      "Global seed set to 0\n"
      ]
     },
     {
@@ -71,7 +68,25 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 1\n",
+      "Global seed set to 1\n",
+      "/home/yianchen/.pyenv/versions/3.9.12/lib/python3.9/site-packages/pennylane/math/utils.py:227: UserWarning: Contains tensors of types {'torch', 'autograd'}; dispatch will prioritize TensorFlow, PyTorch, and  Jax over Autograd. Consider replacing Autograd with vanilla NumPy.\n",
+      "  warnings.warn(\n",
+      "Global seed set to 2\n",
+      "Global seed set to 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pennylane:\n",
       " - tensor([12.7943, 12.7943], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -85,23 +100,7 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 2\n",
-      "Global seed set to 2\n",
-      "Global seed set to 3\n",
-      "Global seed set to 3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
       " - tensor([24.8036, 24.8036], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -115,7 +114,23 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 3\n",
+      "Global seed set to 3\n",
+      "Global seed set to 4\n",
+      "Global seed set to 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pennylane:\n",
       " - tensor([11.2104, 11.2104], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -129,23 +144,7 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 4\n",
-      "Global seed set to 4\n",
-      "Global seed set to 5\n",
-      "Global seed set to 5\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
       " - tensor([0.8598, 0.8598], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -159,7 +158,23 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 5\n",
+      "Global seed set to 5\n",
+      "Global seed set to 6\n",
+      "Global seed set to 6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pennylane:\n",
       " - tensor([-16.0868, -16.0868], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -173,23 +188,7 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 6\n",
-      "Global seed set to 6\n",
-      "Global seed set to 7\n",
-      "Global seed set to 7\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
       " - tensor([6.7341, 6.7341], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -203,7 +202,23 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 7\n",
+      "Global seed set to 7\n",
+      "Global seed set to 8\n",
+      "Global seed set to 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pennylane:\n",
       " - tensor([-4.6039, -4.6039], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -217,23 +232,7 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Global seed set to 8\n",
-      "Global seed set to 8\n",
-      "Global seed set to 9\n",
-      "Global seed set to 9\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
       "Pennylane:\n",
       " - tensor([5.2140, 5.2140], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
@@ -247,7 +246,21 @@
       "# ModelLog: Qubits (IR, WK, NR) = (3, 0, 2)\n",
       "# ModelLog: Quantum device  = default.qubit\n",
       "# ModelLog: Quantum backend = qiskit\n",
-      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n",
+      "# ModelLog: Qubits (IR, WK, NR) = (3, 2, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Global seed set to 9\n",
+      "Global seed set to 9\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Pennylane:\n",
       " - tensor([-11.1421, -11.1421], grad_fn=<ReshapeAliasBackward0>)\n",
       "Qiskit:\n",
