20240105 Add `quick_download`

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -20,9 +20,9 @@
     "\n",
     "general_config = g_main.json_config.copy()\n",
     "general_config[\"batch_size\"]   = 10 # 300\n",
-    "general_config[\"rnd_seed\"]     = 1\n",
+    "general_config[\"rnd_seed\"]     = 0\n",
     "general_config[\"num_pt_ptcs\"]  = 4\n",
-    "general_config[\"num_bin_data\"] = 25 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
+    "general_config[\"num_bin_data\"] = 100 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
     "L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
     "# Quantum configurations.\n",
@@ -140,13 +140,13 @@
    "source": [
     "# Recreate a new data configuration list.\n",
     "data_config_list = [\n",
-    "    # # 2-prong v.s. 1-prong.\n",
-    "    # g_main.generate_data_config(\n",
-    "    #     sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
-    "    #     cut_pt=(800, 1000), subjet_radius=0, \n",
-    "    #     bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "    #     num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
-    "    # ),\n",
+    "    # 2-prong v.s. 1-prong.\n",
+    "    g_main.generate_data_config(\n",
+    "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
+    "        cut_pt=(800, 1000), subjet_radius=0, \n",
+    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "    ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    g_main.generate_data_config(\n",
