20230106 Replace "|" to "-" for everything

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -121,7 +121,8 @@
     "    model_suffix = f\"qidx3_qnn{qnn}_gl{gl}_gr{gr}\"\n",
     "\n",
     "    # Get checkpoints file.\n",
-    "    ckpt_key = f\"QuantumRotQCGNN_{model_suffix} | {data_config['abbrev']}_cut{data_config['cut_pt']}\"\n",
+    "    data_suffix = f\"{data_config['abbrev']}_cut(800,1000)_ptc8_bin10-500\"\n",
+    "    ckpt_key = f\"QuantumRotQCGNN_{model_suffix}-{data_suffix}\"\n",
     "    ckpt_path = g_main.get_ckpt_path(ckpt_key)\n",
     "    \n",
     "    # Create model and load checkpoints.\n",
