--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -606,13 +606,13 @@
     "\n",
     "    # Additional model information (used for wandb filter).\n",
     "    model_config[\"model_name\"] = model.__class__.__name__\n",
-    "    model_config[\"group_rnd\"] = f\"{model.__class__.__name__}_{model_config['model_suffix']} | {data_config['data_suffix']}\"\n",
+    "    model_config[\"group_rnd\"] = f\"{model.__class__.__name__}_{model_config['model_suffix']}-{data_config['data_suffix']}\"\n",
     "\n",
     "    # Monitor (either CSVLogger or WandbLogger) configuration and setup.\n",
     "    logger_config = {}\n",
     "    logger_config[\"project\"] = general_config[\"wandb_project\"]\n",
     "    logger_config[\"group\"] = f\"{data_config['sig']}_{data_config['bkg']}\"\n",
-    "    logger_config[\"name\"] = f\"{model_config['group_rnd']} | {general_config['time']}_{general_config['device']}{suffix}_{general_config['rnd_seed']}\"\n",
+    "    logger_config[\"name\"] = f\"{model_config['group_rnd']}-{general_config['time']}_{general_config['device']}{suffix}_{general_config['rnd_seed']}\"\n",
     "    logger_config[\"id\"] = logger_config[\"name\"]\n",
     "    logger_config[\"save_dir\"] = general_config[\"result_dir\"]\n",
     "    if use_wandb:\n",
@@ -666,7 +666,14 @@
     "        )[0] # The output is like [summary_object], so use [0] to get the item.\n",
     "    elif mode == \"predict\":\n",
     "        # The ckpt key helped for finding correct checkpoints file.\n",
-    "        ckpt_key = f\"{model_config['model_name']}_{model_config['model_suffix']} | {data_config['abbrev']}_cut{data_config['cut_pt']}\"\n",
+    "        data_suffix = (\n",
+    "            f\"{data_config['abbrev']}_\"\n",
+    "            f\"cut({data_config['cut_pt'][0]},{data_config['cut_pt'][1]})\"\n",
+    "        )\n",
+    "        ckpt_key = (\n",
+    "            f\"{model_config['model_name']}_{model_config['model_suffix']}\"\n",
+    "            f\"-{data_suffix}\"\n",
+    "        )\n",
     "        # Train 8 particles only, and use the parameters to test other number \n",
     "        # of particles.\n",
     "        if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
