--- a/result_wandb.ipynb
+++ b/result_wandb.ipynb
@@ -22,11 +22,9 @@
     "from itertools import product\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import tqdm\n",
-    "from tqdm.contrib.itertools import product as tqdm_product\n",
     "import wandb\n",
     "\n",
     "import g_main\n",
@@ -52,20 +50,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ClassicalMPGNN_go1024_gh1024_gl4_mh0_ml0 | BB-QCD\n",
-      "ClassicalMPGNN_go1024_gh1024_gl4_mh0_ml0 | TT-QCD\n",
-      "ClassicalMPGNN_go3_gh3_gl2_mh0_ml0 | BB-QCD\n",
-      "ClassicalMPGNN_go3_gh3_gl2_mh0_ml0 | TT-QCD\n",
-      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0 | BB-QCD\n",
-      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0 | TT-QCD\n",
-      "ClassicalMPGNN_go9_gh9_gl2_mh0_ml0 | BB-QCD\n",
-      "ClassicalMPGNN_go9_gh9_gl2_mh0_ml0 | TT-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn3_gl1_gr3 | BB-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn3_gl1_gr3 | TT-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn6_gl1_gr6 | BB-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn6_gl1_gr6 | TT-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9 | BB-QCD\n",
-      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9 | TT-QCD\n"
+      "ClassicalMPGNN_go1024_gh1024_gl4_mh0_ml0-BB-QCD\n",
+      "ClassicalMPGNN_go1024_gh1024_gl4_mh0_ml0-TT-QCD\n",
+      "ClassicalMPGNN_go3_gh3_gl2_mh0_ml0-BB-QCD\n",
+      "ClassicalMPGNN_go3_gh3_gl2_mh0_ml0-TT-QCD\n",
+      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0-BB-QCD\n",
+      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0-TT-QCD\n",
+      "ClassicalMPGNN_go9_gh9_gl2_mh0_ml0-BB-QCD\n",
+      "ClassicalMPGNN_go9_gh9_gl2_mh0_ml0-TT-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn3_gl1_gr3-BB-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn3_gl1_gr3-TT-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn6_gl1_gr6-BB-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn6_gl1_gr6-TT-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9-BB-QCD\n",
+      "QuantumRotQCGNN_qidx3_qnn9_gl1_gr9-TT-QCD\n"
      ]
     }
    ],
@@ -116,7 +114,7 @@
     "        continue\n",
     "    \n",
     "    # Add corresponding counter.\n",
-    "    model = run.name.split()[0] + \" | \" + run.config[\"abbrev\"]\n",
+    "    model = run.name.split(\"-\")[0] + \"-\" + run.config[\"abbrev\"]\n",
     "    counter_dict[model] += 1\n",
     "\n",
     "# Print out counters.\n",
@@ -143,7 +141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 233/233 [02:47<00:00,  1.39it/s]\n"
+      "100%|██████████| 233/233 [02:46<00:00,  1.40it/s]\n"
      ]
     }
    ],
@@ -219,7 +217,7 @@
     "abbrev_list = [\"BB-QCD\", \"TT-QCD\"]\n",
     "\n",
     "# Model dimension list.\n",
-    "dim_list = [3,6,9]\n",
+    "dim_list = [3, 6, 9]\n",
     "\n",
     "# Figure settings.\n",
     "num_row = len(abbrev_list)\n",
