--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -4,45 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Delete Wandb runs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ClassicalMPGNN_go6_gh6_gl2_mh0_ml0 | BB-QCD_cut(800, 1000)_ptc8_bin10-1_R0 | 456456456_456456456_456456456_0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import wandb\n",
+    "### This notebook use `wandb.Api()` to modify runs.\n",
     "\n",
-    "api     = wandb.Api()\n",
-    "date    = \"\"\n",
-    "suffix  = \"456456456\"\n",
-    "project = \"g_main\"\n",
-    "state   = \"finished\"\n",
-    "\n",
-    "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "    # if date in run.id and suffix in run.id:\n",
-    "    if (run.state == state) and (date in run.id) and (suffix in run.id):\n",
-    "        print(run.id)\n",
-    "        # run.delete()\n",
-    "    # elif run.id is None:\n",
-    "    #     print(run.id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Modify None (null) values"
+    "Uncomment the cell for needed."
    ]
   },
   {
@@ -51,23 +15,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import wandb\n",
+    "import wandb\n",
+    "api = wandb.Api()\n",
     "\n",
-    "# api     = wandb.Api()\n",
-    "# date    = \"\"\n",
-    "# suffix  = \"\"\n",
-    "# project = \"g_eflow_QFCGNN\"\n",
+    "# `wandb` info.\n",
+    "account = \"ntuyianchen\"\n",
+    "project = \"g_main\"\n",
     "\n",
-    "# for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "#     if run.state == \"finished\":\n",
-    "#         if \"subjet_radius\" in run.config.keys() and run.config[\"subjet_radius\"] == None:\n",
-    "#             print(run.id)\n",
-    "#             run.config[\"subjet_radius\"] = 0\n",
-    "#             run.update()\n",
-    "#         if \"num_pt_ptcs\" in run.config.keys() and run.config[\"num_pt_ptcs\"] == None:\n",
-    "#             print(run.id)\n",
-    "#             run.config[\"num_pt_ptcs\"] = \"Full\"\n",
-    "#             run.update()"
+    "# Fetching `runs` on `wandb`.\n",
+    "runs = api.runs(f\"{account}/{project}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Delete `wandb` runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # `run` info.\n",
+    "# date = \"20231234\"\n",
+    "# suffix = \"rnd123\"\n",
+    "# state = \"finished\"\n",
+    "\n",
+    "# for run in runs:\n",
+    "#     is_state = (run.state == state)\n",
+    "#     is_date = (date in run.id)\n",
+    "#     is_suffix = (suffix in run.id)\n",
+    "#     if is_state and is_date and is_suffix:\n",
+    "#         print(run.name)\n",
+    "#         # run.delete()"
    ]
   },
   {
@@ -83,49 +66,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "\n",
-    "api     = wandb.Api()\n",
-    "date    = \"\"\n",
-    "suffix  = \"\"\n",
-    "project = \"g_main\"\n",
-    "\n",
-    "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
-    "    if run.state == \"finished\":\n",
-    "        # FCGNN -> QCGNN\n",
-    "        # name_before, name_after = \"QuantumRotFCGNN\", \"QuantumRotQCGNN\"\n",
-    "        name_before, name_after = \"Classical2PCGNN\", \"ClassicalMPGNN\"\n",
-    "        if name_before in run.name:\n",
-    "            run.id   = run.id.replace(name_before, name_after)\n",
-    "            run.name = run.name.replace(name_before, name_after)\n",
-    "            run.config[\"id\"]         = run.config[\"id\"].replace(name_before, name_after)\n",
-    "            run.config[\"name\"]       = run.config[\"name\"].replace(name_before, name_after)\n",
-    "            run.config[\"group_rnd\"]  = run.config[\"group_rnd\"].replace(name_before, name_after)\n",
-    "            run.config[\"model_name\"] = name_after\n",
-    "            run.update()\n",
-    "            print(run.id)\n",
-    "            print(100*\"-\")\n",
-    "        \n",
-    "        # # Update null values of sig and bkg\n",
-    "        # if \"sig\" not in run.config.keys() or \"abbrev\" not in run.config.keys():\n",
-    "        #     if \"BB-QCD\" in run.id:\n",
-    "        #         run.config[\"sig\"]    = \"VzToZhToVevebb\"\n",
-    "        #         run.config[\"abbrev\"] = \"BB-QCD\"\n",
-    "        #     elif \"TT-QCD\" in run.id:\n",
-    "        #         run.config[\"sig\"]    = \"VzToTt\"\n",
-    "        #         run.config[\"abbrev\"] = \"TT-QCD\"\n",
-    "        #     run.config[\"bkg\"] = \"VzToQCD\"\n",
-    "        #     run.update()\n",
-    "        #     print(run.name)\n",
-    "        #     print(100*\"-\")\n",
-    "        \n",
-    "        # # remove \"_\" in last character if needed\n",
-    "        # if run.name[-1] == \"_\" or run.name[-1] == \" \":\n",
-    "        #     run.name = run.name[:-1]\n",
-    "        #     run.config[\"name\"] = run.config[\"name\"][:-1]\n",
-    "        #     run.update()\n",
-    "        #     print(run.id)\n",
-    "        #     print(100*\"-\")"
+    "# for run in runs:\n",
+    "#     \"\"\"Change configuration of runs.\"\"\"\n",
+    "#     if run.state == \"finished\":\n",
+    "#         name_before, name_after = \"before\", \"after\"\n",
+    "#         if name_before in run.name:\n",
+    "#             run.id = run.id.replace(name_before, name_after)\n",
+    "#             run.name = run.name.replace(name_before, name_after)\n",
+    "#             run.config[\"id\"] = run.config[\"id\"].replace(name_before, name_after)\n",
+    "#             run.config[\"name\"] = run.config[\"name\"].replace(name_before, name_after)\n",
+    "#             run.config[\"group_rnd\"] = run.config[\"group_rnd\"].replace(name_before, name_after)\n",
+    "#             run.config[\"model_name\"] = name_after\n",
+    "#             run.update()\n",
+    "#             print(run.id)\n",
+    "#             print(100*\"-\")\n",
+    "#     else:\n",
+    "#         continue"
    ]
   }
  ],
