20230106 Fix cut tuple naming problem (remove space)

--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -670,10 +670,9 @@
     "            f\"{data_config['abbrev']}_\"\n",
     "            f\"cut({data_config['cut_pt'][0]},{data_config['cut_pt'][1]})\"\n",
     "        )\n",
-    "        ckpt_key = (\n",
-    "            f\"{model_config['model_name']}_{model_config['model_suffix']}\"\n",
-    "            f\"-{data_suffix}\"\n",
-    "        )\n",
+    "        model_name = model_config['model_name']\n",
+    "        model_suffix = model_config['model_suffix']\n",
+    "        ckpt_key = f\"{model_name}_{model_suffix}-{data_suffix}\"\n",
     "        # Train 8 particles only, and use the parameters to test other number \n",
     "        # of particles.\n",
     "        if model_config['model_name'] == QuantumRotQCGNN.__name__:\n",
@@ -946,7 +945,7 @@
     "        \"num_pt_ptcs\": num_pt_ptcs,\n",
     "    }\n",
     "    data_config[\"data_suffix\"] = (\n",
-    "        f\"{abbrev}_cut{cut_pt}_ptc{num_pt_ptcs}_bin{bin}\"\n",
+    "        f\"{abbrev}_cut({cut_pt[0]},{cut_pt[1]})_ptc{num_pt_ptcs}_bin{bin}\"\n",
     "        f\"-{num_bin_data}_R{subjet_radius}\"\n",
     "    )\n",
     "\n",
