20240109 QCGNN -> QCGNN_IX & QCGNN_0 | Fix with `qml.prod` bug

--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -16,6 +16,8 @@
     "import g_main\n",
     "import module_model\n",
     "\n",
+    "QCGNN = module_model.QCGNN_IX\n",
+    "\n",
     "shots = 1024\n",
     "\n",
     "general_config = g_main.json_config.copy()\n",
@@ -40,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class IBMQQCGNN(module_model.QCGNN):\n",
+    "class IBMQQCGNN(QCGNN):\n",
     "    \"\"\"Return additional measurement outputs.\"\"\"\n",
     "    def forward(self, x):\n",
     "        # Original workflow.\n",
