--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -62,7 +62,10 @@
     "import module_training\n",
     "\n",
     "# Faster calculation on GPU but less precision.\n",
-    "torch.set_float32_matmul_precision(\"medium\")"
+    "torch.set_float32_matmul_precision(\"medium\")\n",
+    "\n",
+    "# QCGNN template to use\n",
+    "QCGNN = module_model.QCGNN_IX"
    ]
   },
   {
@@ -277,7 +280,7 @@
    "source": [
     "### Quantum Complete Graph Neural Network (QCGNN)\n",
     "\n",
-    "The main structure of QCGNN is written in the `module_model.py` script, and the following codes focus on how data is encoded to the quantum circuit (corresponding to the arguement `ctrl_enc` in `module_model.QCGNN`). In this paper, we test the encoding ansatz constructed through angle encoding.\n",
+    "The main structure of QCGNN is written in the `module_model.py` script, and the following codes focus on how data is encoded to the quantum circuit (corresponding to the arguement `ctrl_enc` in `module_model.QCGNN_IX` or `module_model.QCGNN_0`). In this paper, we test the encoding ansatz constructed through angle encoding.\n",
     "\n",
     "Note that there are two encoding functions below (`pennylane_encoding` and `qiskit_encoding`), both are equivalent but run in different quantum devices.\n",
     "- `pennylane_encoding`: for simulation using PennyLane (such as \"default.qubit\").\n",
@@ -428,7 +431,7 @@
     "        self.ctrl_enc = ctrl_enc\n",
     "        \n",
     "        # Constructing `phi` and `mlp` just like MPGNN.\n",
-    "        self.phi = module_model.QCGNN(\n",
+    "        self.phi = QCGNN(\n",
     "            num_ir_qubits=num_ir_qubits,\n",
     "            num_nr_qubits=num_nr_qubits,\n",
     "            num_layers=num_layers,\n",
@@ -1072,7 +1075,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
