--- a/result_ibmq.ipynb
+++ b/result_ibmq.ipynb
@@ -11,29 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#--------------------------------------------------------------------------\n",
-      "#                         FastJet release 3.4.0\n",
-      "#                 M. Cacciari, G.P. Salam and G. Soyez                  \n",
-      "#     A software package for jet finding and analysis at colliders      \n",
-      "#                           http://fastjet.fr                           \n",
-      "#\t                                                                      \n",
-      "# Please cite EPJC72(2012)1896 [arXiv:1111.6097] if you use this package\n",
-      "# for scientific work and optionally PLB641(2006)57 [hep-ph/0512210].   \n",
-      "#                                                                       \n",
-      "# FastJet is provided without warranty under the GNU GPL v2 or higher.  \n",
-      "# It uses T. Chan's closest pair algorithm, S. Fortune's Voronoi code,\n",
-      "# CGAL and 3rd party plugin jet algorithms. See COPYING file for details.\n",
-      "#--------------------------------------------------------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from itertools import product\n",
@@ -48,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,11 +39,11 @@
       "\n",
       "      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\n",
       "--------------------------------------------------\n",
-      "Q = 3 |   0.52   |   0.50   |   0.98   |   0.28   \n",
+      "Q = 3 |   0.48   |   0.50   |   0.96   |   0.35   \n",
       "--------------------------------------------------\n",
-      "Q = 6 |   0.54   |   0.50   |   0.86   |   0.46   \n",
+      "Q = 6 |   0.40   |   0.50   |   0.24   |   0.55   \n",
       "--------------------------------------------------\n",
-      "Q = 9 |   0.62   |   0.52   |   0.80   |   0.51   \n",
+      "Q = 9 |   0.52   |   0.50   |   0.98   |   0.10   \n",
       "\n",
       "##################################################\n",
       "\n",
@@ -71,11 +51,11 @@
       "\n",
       "      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\n",
       "--------------------------------------------------\n",
-      "Q = 3 |   0.58   |   0.50   |   0.86   |   0.47   \n",
+      "Q = 3 |   0.59   |   0.50   |   0.85   |   0.46   \n",
       "--------------------------------------------------\n",
-      "Q = 6 |   0.81   |   0.52   |   0.49   |   0.71   \n",
+      "Q = 6 |   0.63   |   0.50   |   0.63   |   0.30   \n",
       "--------------------------------------------------\n",
-      "Q = 9 |   0.64   |   0.41   |   0.59   |   0.73   \n",
+      "Q = 9 |   0.52   |   0.48   |   0.60   |   0.25   \n",
       "\n",
       "##################################################\n",
       "\n"
@@ -95,9 +75,9 @@
     "    result = result.item()\n",
     "    return result\n",
     "\n",
-    "rnd_seed= 0\n",
+    "rnd_seed= 2\n",
     "for abbrev, backend in product(channel_list, backend_list):\n",
-    "    print(f\"* Channel: {abbrev} | Backend: {backend} | Size: {len(y_true)}\\n\")\n",
+    "    print(f\"* Channel: {abbrev} | Backend: {backend} | Size: {100}\\n\")\n",
     "    print(f\"      | SIM  ACC | IBMQ ACC | S/I  ACC | S/I DIFF\")\n",
     "    for Q in [3, 6, 9]:\n",
     "        # Horizontal splitting line.\n",
