--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -766,6 +766,7 @@
     "        \"gnn_in\": 6, \"gnn_out\": go, \"gnn_hidden\": gh, \"gnn_layers\": gl,\n",
     "        \"mlp_hidden\": 0, \"mlp_layers\": 0,\n",
     "        \"lr\": lr, \"model_suffix\": model_suffix,\n",
+    "        \"base_model\": module_model.ClassicalMLP.__name__,\n",
     "    }\n",
     "    model = ClassicalMPGNN(**model_config)\n",
     "\n",
@@ -850,6 +851,7 @@
     "        \"gnn_reupload\": gr,\n",
     "        \"lr\": lr,\n",
     "        \"model_suffix\": model_suffix,\n",
+    "        \"base_model\": QCGNN.__name__,\n",
     "    }\n",
     "    model = QuantumRotQCGNN(\n",
     "        num_ir_qubits=qidx,\n",
@@ -996,7 +998,7 @@
     "    # execute_classical(general_config, data_config, go=1024, gh=1024, gl=4, lr=1E-3, mode=\"train\")\n",
     "\n",
     "    # # Quantum QCGNN with NR qubits = reuploads = {3, 6, 9}.\n",
-    "    # for q in [3,6,9]:\n",
+    "    # for q in [3, 6, 9]:\n",
     "    #     execute_quantum(general_config, data_config, qnn=q, gl=1, gr=q, lr=1E-3, mode=\"train\")"
    ]
   },
@@ -1075,7 +1077,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
