20240109 Change data to variable size and add `pt_threshold`

--- a/demo_save_to_npz.ipynb
+++ b/demo_save_to_npz.ipynb
@@ -37,8 +37,9 @@
     "        channel=channel,\n",
     "        cut_pt=(800,1000),\n",
     "        subjet_radius=0,\n",
-    "        num_pt_ptcs=8,\n",
-    "        use_hdf5=True\n",
+    "        max_num_ptcs=16,\n",
+    "        use_hdf5=True,\n",
+    "        pt_threshold=0.05,\n",
     "    )\n",
     "\n",
     "    return jet_events\n",
