--- a/g_ibmq.ipynb
+++ b/g_ibmq.ipynb
@@ -23,12 +23,12 @@
     "general_config = g_main.json_config.copy()\n",
     "general_config[\"batch_size\"]   = 10 # 300\n",
     "general_config[\"rnd_seed\"]     = 0\n",
-    "general_config[\"num_pt_ptcs\"]  = 4\n",
+    "general_config[\"max_num_ptcs\"]  = 4\n",
     "general_config[\"num_bin_data\"] = 100 # 25 * 10 * 2 * (1-0.8) = 100 test data\n",
     "L.seed_everything(general_config[\"rnd_seed\"])\n",
     "\n",
     "# Quantum configurations.\n",
-    "qidx = int(np.ceil(np.log2(general_config[\"num_pt_ptcs\"])))\n",
+    "qidx = int(np.ceil(np.log2(general_config[\"max_num_ptcs\"])))\n",
     "qnn, gl, gr  = 9, 1, 9\n",
     "\n",
     "# Output directory.\n",
@@ -148,7 +148,7 @@
     "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
     "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"]\n",
     "    ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
@@ -156,7 +156,7 @@
     "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
     "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
-    "        num_pt_ptcs=general_config[\"num_pt_ptcs\"]\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"]\n",
     "    ),\n",
     "]"
    ]
@@ -218,8 +218,8 @@
     "        # backend - shots - abbrev\n",
     "        f\"{ibmq_backend}-s{shots}-{data_config['abbrev']}_\"\n",
     "\n",
-    "        # rnd_seed - num_pt_ptcs\n",
-    "        + f\"r{general_config['rnd_seed']}-p{general_config['num_pt_ptcs']}_\"\n",
+    "        # rnd_seed - max_num_ptcs\n",
+    "        + f\"r{general_config['rnd_seed']}-p{general_config['max_num_ptcs']}_\"\n",
     "\n",
     "        # num_bin_data\n",
     "        + f\"n{general_config['num_bin_data']}_\"\n",
