--- a/g_main.ipynb
+++ b/g_main.ipynb
@@ -536,12 +536,28 @@
     "    \"\"\"\n",
     "\n",
     "    # Generate uniform pt events.\n",
-    "    sig_fatjet_events = module_data.FatJetEvents(channel=data_config[\"sig\"], cut_pt=data_config[\"cut_pt\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
-    "    bkg_fatjet_events = module_data.FatJetEvents(channel=data_config[\"bkg\"], cut_pt=data_config[\"cut_pt\"], subjet_radius=data_config[\"subjet_radius\"], num_pt_ptcs=data_config[\"num_pt_ptcs\"])\n",
-    "    sig_events  = sig_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
-    "    bkg_events  = bkg_fatjet_events.generate_uniform_pt_events(bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "    fatjet_events = lambda channel: module_data.FatJetEvents(\n",
+    "        channel=channel,\n",
+    "        cut_pt=data_config[\"cut_pt\"],\n",
+    "        subjet_radius=data_config[\"subjet_radius\"],\n",
+    "        max_num_ptcs=data_config[\"max_num_ptcs\"],\n",
+    "        pt_threshold=data_config[\"pt_threshold\"],\n",
+    "    )\n",
+    "    sig_fatjet_events = fatjet_events(data_config[\"sig\"])\n",
+    "    bkg_fatjet_events = fatjet_events(data_config[\"bkg\"])\n",
+    "    sig_events = sig_fatjet_events.generate_uniform_pt_events(\n",
+    "        bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
+    "    bkg_events = bkg_fatjet_events.generate_uniform_pt_events(\n",
+    "        bin=data_config[\"bin\"], num_bin_data=data_config[\"num_bin_data\"])\n",
     "\n",
-    "    return module_data.JetDataModule(sig_events, bkg_events, data_ratio=data_ratio, batch_size=batch_size, graph=graph)"
+    "    return module_data.JetDataModule(\n",
+    "        sig_events=sig_events,\n",
+    "        bkg_events=bkg_events,\n",
+    "        data_ratio=data_ratio,\n",
+    "        batch_size=batch_size,\n",
+    "        graph=graph,\n",
+    "        max_num_ptcs=data_config[\"max_num_ptcs\"]\n",
+    "    )"
    ]
   },
   {
@@ -609,7 +625,8 @@
     "\n",
     "    # Additional model information (used for wandb filter).\n",
     "    model_config[\"model_name\"] = model.__class__.__name__\n",
-    "    model_config[\"group_rnd\"] = f\"{model.__class__.__name__}_{model_config['model_suffix']}-{data_config['data_suffix']}\"\n",
+    "    model_config[\"group_rnd\"] = f\"{model_config['base_model']}_{model_config['model_suffix']}-{data_config['data_suffix']}\"\n",
+    "    model_config[\"group_rnd_full\"] = f\"{model_config['model_name']}-{model_config['group_rnd']}\"\n",
     "\n",
     "    # Monitor (either CSVLogger or WandbLogger) configuration and setup.\n",
     "    logger_config = {}\n",
@@ -838,7 +855,7 @@
     "    \"\"\"\n",
     "\n",
     "    # Number of IR qubits\n",
-    "    qidx = int(np.ceil(np.log2(data_config[\"num_pt_ptcs\"])))\n",
+    "    qidx = int(np.ceil(np.log2(data_config[\"max_num_ptcs\"])))\n",
     "\n",
     "    # Suffix used for wandb filter and training result.\n",
     "    model_suffix = f\"qidx{qidx}_qnn{qnn}_gl{gl}_gr{gr}\"\n",
@@ -911,7 +928,7 @@
     "        bin: int,\n",
     "        subjet_radius: float,\n",
     "        num_bin_data: int,\n",
-    "        num_pt_ptcs: int\n",
+    "        max_num_ptcs: int\n",
     "    ):\n",
     "    \"\"\"Generate a dictionary of data configurations\n",
     "    \n",
@@ -932,7 +949,7 @@
     "            How many bins that will uniformly distributed over cut_pt.\n",
     "        num_bin_data : int\n",
     "            Number of data that uniformly generated in each bin.\n",
-    "        num_pt_ptcs : int\n",
+    "        max_num_ptcs : int\n",
     "            Maximum number of particles in each jet.\n",
     "\n",
     "    Returns:\n",
@@ -947,10 +964,10 @@
     "        \"subjet_radius\": subjet_radius,\n",
     "        \"bin\": bin,\n",
     "        \"num_bin_data\": num_bin_data,\n",
-    "        \"num_pt_ptcs\": num_pt_ptcs,\n",
+    "        \"max_num_ptcs\": max_num_ptcs,\n",
     "    }\n",
     "    data_config[\"data_suffix\"] = (\n",
-    "        f\"{abbrev}_cut({cut_pt[0]},{cut_pt[1]})_ptc{num_pt_ptcs}_bin{bin}\"\n",
+    "        f\"{abbrev}_cut({cut_pt[0]},{cut_pt[1]})_ptc{max_num_ptcs}_bin{bin}\"\n",
     "        f\"-{num_bin_data}_R{subjet_radius}\"\n",
     "    )\n",
     "\n",
@@ -961,14 +978,16 @@
     "    generate_data_config(\n",
     "        sig=\"VzToZhToVevebb\", bkg=\"VzToQCD\", abbrev=\"BB-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"], num_pt_ptcs=8\n",
+    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
     "    ),\n",
     "    \n",
     "    # 3-prong v.s. 1-prong.\n",
     "    generate_data_config(\n",
     "        sig=\"VzToTt\", bkg=\"VzToQCD\", abbrev=\"TT-QCD\",\n",
     "        cut_pt=(800, 1000), subjet_radius=0, \n",
-    "        bin=10, num_bin_data=general_config[\"num_bin_data\"], num_pt_ptcs=8\n",
+    "        bin=10, num_bin_data=general_config[\"num_bin_data\"],\n",
+    "        max_num_ptcs=general_config[\"max_num_ptcs\"],\n",
     "    ),\n",
     "]"
    ]
@@ -1026,8 +1045,8 @@
     "prediction_tuple = product(range(3), num_ptcs_range, data_config_list)\n",
     "\n",
     "# Uncomment the model you want to predict.\n",
-    "for rnd_seed, num_pt_ptcs, data_config in prediction_tuple:\n",
-    "    data_config[\"num_pt_ptcs\"] = num_pt_ptcs\n",
+    "for rnd_seed, max_num_ptcs, data_config in prediction_tuple:\n",
+    "    data_config[\"max_num_ptcs\"] = max_num_ptcs\n",
     "    general_config[\"rnd_seed\"] = rnd_seed\n",
     "\n",
     "    # # Prediction for classical MPGNN.\n",
