--- a/wandb_api.ipynb
+++ b/wandb_api.ipynb
@@ -30,7 +30,8 @@
     "\n",
     "for run in api.runs(f\"ntuyianchen/{project}\"):\n",
     "    # if date in run.id and suffix in run.id:\n",
-    "    if (run.state == state) and (date in run.id) and (suffix in run.id):\n",
+    "    check_state = True if state == \"\" else (run.state == state)\n",
+    "    if check_state and (date in run.id) and (suffix in run.id):\n",
     "        print(run.id)\n",
     "        # run.delete()\n",
     "    # elif run.id is None:\n",
